statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysqldb
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
        - name: dbcont
          image: srikanth891957/php:dbimg
          ports:
            - containerPort: 3306
              name: mysql
          #secret Integration
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "258Mi"
          volumeMounts:
            - name: mysql-data
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: 
          - ReadWriteOnce
        storageClassName: gp2
        resources:
          requests:
            storage: 2Gi
